--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     text-align: center;
 }
 .pattern-card{
-    background: url (bg-pattern-card.svg) no-repeat center center/
+    background: url(./images/bg-pattern-card.svg) no-repeat center center/cover;
     cover;
     width:100%;
     height:  140px;
