--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     background-color: hsl(185, 75%, 39%);
-    background-image: url(images/bg-pattern-top.svg),url(/bg-pattern-bottom.svg);
+    background-image: url(bg-pattern-top.svg),url(bg-pattern-bottom.svg);
     background-position: -300px -600px, 600px 250px;
     background-repeat: no-repeat, no-repeat;
     display: flex;
